<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OU</string>
    <string name="textTestString">This text is centered</string>
    <string name="classesButton">Classes</string>
    <string name="newsButton">News</string>
    <string name="mapButton">Map</string>
    <string name="failedSourceUpdate">Failed to get content from D2L.</string>
    <string name="noCoursesFound">Failed to find any courses.</string>
    <string name="badLogin">Incorrect username or password.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="titlePrefs">Set Credentials</string>
    <string name="usernameSummary">Your OU 4x4</string>
    <string name="passwordSummary">Your OU password</string>
    <string name="msgWaitWhileUpdating">Updating courses</string>
    <string name="msgWaitWhileUpdatingContent">Updating Course Content</string>
    <string name="msgWaitWhileUpdatingGrades">Updateing Course Grades</string>
    <string name="prefsUpdateButton">Update</string>
    <string name="titleRefreshClasses">Reload</string>
    <string name="unknownError">An unknown error occured.</string>
    <string name="lastUpdateTitle">Last Update:</string>
    <string name="sqlSetupClassList" formatted="false">create table %s(%s int primary key, %s text, %s text, %s text, %s text, %s int, %s int)</string>
    <string name="sqlSetupContent" formatted="false">create table %s(%s int primary key, %s text, %s text, %s text, %s text, %s int, %s int, %s text)</string>
    <string name="sqlSetupGrades" formatted="false">create table %s(%s int primary key, %s text, %s text, %s text, %s text, %s int, %s int)</string>
    <string name="sqlSetupCourseNews" formatted="false">create table %s (%s int primary key, %s text, %s text, %s int, %s text, %s int)</string>
    <string name="sqlSetupRoster" formatted="false">create table %s (%s int primary key, %s int, %s text, %s text, %s text, %s text, %s int)</string>
    <string name="sqlSetupMap" formatted="false">create table %s (%s int primary key, %s text, %s int, %s int, %s text)</string>
    <string name="msgSetupPrefs">Please enter your login information</string>
    <string name="noAppToOpenFile">No suitable app to open this file</string>
    <string name="downloadFailed">Download failed</string>
    <string name="failedToGetDLink">Could not get link to file from D2L</string>
    <string name="downloadWaitDiag">Downloading&#8230;</string>
    <string name="updating">Updating&#8230;</string>
    <string name="courseHomeTitle">Course Home</string>
    <string name="titleShowMapSideMenu">Side Menu</string>
    <string name="aboutButtonText">About this app</string>
    <string name="searchFieldHint">Building Name</string>
    <string name="clearSearchButtonDesc">Clear text</string>
    <string name="loginButtonText">Login</string>
    <string name="loggedInAsText">Logged in as</string>
    <string name="aboutTitle">About</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="logoutQuestion">Would you like to logout?</string>
    <string name="nevermind">Nevermind</string>
    <string name="aboutMainTitle">OU Mobile App</string>
    <string name="aboutMainDesc">This android app was developed for free by David Findley for use by students at the University of Oklahoma.
It lets users read OU Daily News, search for buildings on the campus map, and gives partial D2L access.  This is not
an official University of Oklahoma application, nor is it sponsored by the University of Oklahoma.</string>
    <string name="aboutThanksTitle">Special Thanks</string>
    <string name="aboutThanksContent">Design input: Vincent Do, Hoai Nguyen\nArt asset contribution: John Dewberry\nTesting device: Vincent Do</string>
    <string name="aboutLicenseTitle">License</string>
    <string name="aboutLicenseContent">The OU Mobile App by <a href="mailto:thefindley@gmail.com">David findley</a> is licensed under a <a href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.
Based on work at <a href="https://github.com/ThinksInBits/OU-Mobile-App">github.com</a>.</string>
    <string name="aboutLibsTitle">Libraries Used</string>
    <string name="aboutLibsContent">This application uses several third-party opensource libraries in order implement it\'s features.
	\n\n<a href="http://hc.apache.org/httpcomponents-client-ga/">Apache HttpClient</a> is a library that lets developers interact with Web servers in a very robust way. OU Mobile App
	uses this library to pull user specific Webpages from OU\'s D2L Website. This library is licensed under the<a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, version 2.0</a>.
	\n\n<a href="http://jsoup.org/">jsoup Html parser</a> is a library for reading and modifying html source files. OU Mobile App uses this 
	library to extract user specific data from D2L Webpages. This library is licensed under the <a href="http://jsoup.org/license">MIT License</a>.
	\n\n<a href="http://actionbarsherlock.com/">ActionBarSherlock</a> is a library that extends the compatibility library in order to facilitate use of 
	the action bar design pattern across all versions of Android with a single API. This library is licensed 
	under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, version 2.0</a>.
	\n\n<a href="https://github.com/jfeinstein10/SlidingMenu">SlidingMenu</a> is a library that allows Android apps to easily implement the sliding menu design pattern.
	This library is licensed under <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, version 2.0</a>.</string>
    <string name="oudaily">OU Daily</string>
    <string name="bus_routes">Pick a Route</string>
    <string name="bus_stops">Pick a Stop</string>
    <string name="bus_arrival">Arrival In...</string>
    <string name="buses_button">Buses</string>

    <string-array name="class_nav">
        <item>Home</item>
        <item>Content</item>
        <item>Grades</item>
        <item>Roster</item>
    </string-array>

    <string name="title_activity_html_content">HtmlContentActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

</resources>