<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/titleVersionContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/aboutMainTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/aboutMainTitle"
                android:textSize="17sp"
                android:layout_weight="0.5"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/versionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="15sp"
                android:layout_weight="0.5"
                android:textColor="#666666" />
        </LinearLayout>

        <TextView
            android:id="@+id/aboutMainContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:paddingBottom="5dp"
            android:paddingRight="10dp"
            android:paddingTop="2dp"
            android:text="@string/aboutMainDesc"
            android:textColor="#555555"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/aboutThanksTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/aboutThanksTitle"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/aboutThanksContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:paddingBottom="5dp"
            android:paddingRight="10dp"
            android:paddingTop="2dp"
            android:text="@string/aboutThanksContent"
            android:textColor="#555555"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/aboutLicenseTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/aboutLicenseTitle"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/aboutLicenseContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:paddingBottom="5dp"
            android:paddingRight="10dp"
            android:paddingTop="2dp"
            android:textColor="#555555"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/aboutLibsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/aboutLibsTitle"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/aboutLibsContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:paddingBottom="5dp"
            android:paddingRight="10dp"
            android:paddingTop="2dp"
            android:textColor="#555555"
            android:textSize="15sp" />
    </LinearLayout>

</ScrollView>