<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333"
    android:orientation="vertical" >

	    <TextView
	        android:background="@drawable/content_list_button_selector"
	        android:id="@+id/news_button"
        	android:clickable="true"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textColor="#ffffff"
	        android:textSize="18sp"
	        android:text="@string/newsButton"
	        android:paddingBottom="8dp"
	        android:paddingTop="10dp"
	        android:paddingLeft="10dp"
	        android:drawableLeft="@drawable/news_button_icon_a"
	        android:onClick="sideNavItemSelected" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#222222" />
    
    <TextView
	        android:background="@drawable/content_list_button_selector"
	        android:id="@+id/classes_button"
        	android:clickable="true"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textColor="#ffffff"
	        android:textSize="18sp"
	        android:text="@string/classesButton"
	        android:paddingBottom="8dp"
	        android:paddingTop="10dp"
	        android:paddingLeft="10dp"
	        android:drawableLeft="@drawable/grades_button_icon_a"
	        android:onClick="sideNavItemSelected" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#222222" />
    
    <TextView
	        android:background="@drawable/content_list_button_selector"
	        android:id="@+id/map_button"
        	android:clickable="true"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textColor="#ffffff"
	        android:textSize="18sp"
	        android:text="@string/mapButton"
	        android:paddingBottom="8dp"
	        android:paddingTop="10dp"
	        android:paddingLeft="10dp"
	        android:drawableLeft="@drawable/map_button_icon_a"
	        android:onClick="sideNavItemSelected" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#222222" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical" >
        <View
            android:background="#888888"
            android:layout_width="match_parent"
            android:layout_height="1dp" />
        <TextView
	        android:background="@drawable/content_list_button_selector"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:drawableLeft="@drawable/user_icon"
	        android:id="@+id/whoAmI"
	        android:textColor="#888888"
	        android:textSize="14sp"
	        android:paddingLeft="10dp"
	        android:paddingBottom="10dp"
	        android:paddingTop="10dp"
	        android:clickable="true"
	        android:gravity="center_vertical"
	        android:onClick="userSideMenuButton" />
        <View
            android:background="#888888"
            android:layout_width="match_parent"
            android:layout_height="1dp" />
        <TextView
	        android:background="@drawable/content_list_button_selector"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:id="@+id/aboutButton"
	        android:textColor="#888888"
	        android:textSize="14sp"
	        android:drawableLeft="@drawable/about_icon"
	        android:paddingLeft="10dp"
	        android:paddingBottom="10dp"
	        android:paddingTop="10dp"
	        android:clickable="true"
	        android:text="About this app"
	        android:gravity="center_vertical"
	        android:onClick="aboutButton" />
    </LinearLayout>

</LinearLayout>